<resources>
    <string name="app_name" translatable="false">LogoSmart-Game</string>

    <string name="training">Training</string>
    <string name="games">Games</string>
    <string name="consultation">Consultation</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_notification">button_notification</string>
    <string name="assalomu_alaykum">Assalomu alaykum</string>
    <string name="so_ngi_harakat">So\'ngi harakat</string>
    <string name="boshlash">Boshlash</string>
</resources>