<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/training"

        android:icon="@drawable/ic_subtract"
        android:title="@string/training"
        app:iconTint="@drawable/item_navbar_bg" />

    <item
        android:id="@+id/games"
        android:icon="@drawable/ic_union"
        android:title="@string/games"

        app:iconTint="@drawable/item_navbar_bg" />

    <item
        android:id="@+id/consulting"
        android:icon="@drawable/ic_consultation"
        android:title="@string/consultation"
        app:iconTint="@drawable/item_navbar_bg" />

    <item
        android:id="@+id/community"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>