<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.training.TrainingScreen">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:background="@null"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="vertical"
        app:elevation="2dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBrowse"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:contentInsetEnd="0dp"

            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="@dimen/_9sdp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:id="@+id/appbartextcontainer"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/assalomu_alaykum"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:textFontWeight="700" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="Lobarxon!"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:id="@+id/appbarnotifyic"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_gravity="center_vertical"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/button_notification"
                    android:focusable="true"
                    android:src="@drawable/ic_notification" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            app:contentInsetEnd="0dp"

            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"

            android:clipToPadding="false"
            android:requiresFadingEdge="vertical"
            android:visibility="visible"
            android:layout_height="wrap_content">
            <LinearLayout

                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:id="@+id/lastMovment"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="10dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"

                        android:padding="@dimen/_10sdp">

                        <LinearLayout
                            android:id="@+id/movmentContainer"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_semi_bold"
                                android:text="@string/so_ngi_harakat"
                                android:textColor="@color/black"
                                android:textFontWeight="600" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">


                                <ImageView
                                    android:layout_width="@dimen/_40sdp"
                                    android:layout_height="@dimen/_40sdp"
                                    android:src="@drawable/image_boy" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="@dimen/_7sdp"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="@dimen/_5sdp"
                                        android:ellipsize="end"
                                        android:fontFamily="@font/nunito_bold"
                                        android:singleLine="true"
                                        android:text="01. Nutqni rivojlantirish va asd asd"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />


                                    <com.google.android.material.progressindicator.LinearProgressIndicator
                                        android:id="@+id/famous_game_progress"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/_7sdp"
                                        android:layout_marginEnd="@dimen/_3sdp"
                                        android:max="100"
                                        android:progress="40"
                                        app:indicatorColor="@color/yellow"
                                        app:trackColor="@color/track_color"
                                        app:trackCornerRadius="@dimen/_5sdp"
                                        app:trackThickness="@dimen/_8sdp" />


                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/rightIcon"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/ic_next_button" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trainingRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="0dp"
        android:overScrollMode="never"

        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_layout_training" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>